Function to previous button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <img class="images" src="../images/bus-ratp_ancien.jpg" />
       </div>
     </div>
-    <button id="next">Cliquer pour changer d'image</button>
+    <div class="button-container">
+      <button id="previous">Previous Project</button>
+      <button id="next">Next Project</button>
+    </div>
     <script src="./portfolio.js"></script>
   </body>
 </html>
