--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>portfolio</title>
   </head>
   <body>
-    <div id="name-project-display"></div>
+    <div id="id-project-display"></div>
     <div class="carousel">
       <div class="images-container">
         <img class="images" src="../images/bus-paris.jpg" />
